- 增加 H.LowCode.DesignEngine 服务端 HttpApi、Application 等 - 增加 H.LowCode.DesignEngine.Abstraction 抽象层，用于抽象组件（默认组件，扩展组件）、模板页 加载逻辑，同时便于后续自定义组件实现 - 移除部分 BlazorEventDispatcher.RegisterEvent 事件订阅逻辑，因为所有该类型组件都会触发事件。改为 Component.RefreshState() 仅刷新指定组件，减少不必要的组件渲染 - 增加页面库模板页加载逻辑，同时增加 Form、Table 模板页(待实现) - 增加 AppSchema、PropertyItemSchema 类型

--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/CardWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/CardWrap.razor
@@ -3,7 +3,7 @@
         <a>More</a>
     </Extra>
     <Body>
-        <DropItemContainer ParentComponent="@CreatComponent("card-1")" Style="min-height:90px; height:auto; background: #f4f7fa;"></DropItemContainer>
+        <DropItemContainer ContainerComponent="@CreatComponent("card-1")" Style="min-height:90px; height:auto; background: #f4f7fa;"></DropItemContainer>
     </Body>
 </Card>
 
@@ -24,12 +24,6 @@
         base.OnInitialized();
     }
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-            RegisterEventDispatcher();
-    }
-
     protected override bool ShouldRender()
     {
         return false;
@@ -39,15 +33,6 @@
     {
         if (_component == null)
             _component = Component.CopyNew();
-    }
-
-    private void RegisterEventDispatcher()
-    {
-        //订阅属性面板中的事件
-        BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
-        {
-            StateHasChanged();
-        });
     }
     #endregion
 
