--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,7 +1,7 @@
 ﻿@inject DragDropStateService DragDropStateService
 
-<div class="designpage" style="margin:5px; height:100%; height:100%;">
-    <DropItemContainer ParentComponent="@DragDropStateService.RootComponent"></DropItemContainer>
+<div class="designpage" style="margin:5px; height:100%; height:100%; overflow-y: auto;">
+    <DropItemContainer ContainerComponent="@DragDropStateService.RootComponent"></DropItemContainer>
 </div>
 
 @code {
