--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
@@ -1,28 +1,30 @@
-﻿
-<div style="margin: 5px 15px 20px 10px;">
-    <label>布局：</label>
-    <RadioGroup TValue="string" @bind-Value="@Component.ComponentStyle.Display" OnChange="() => OnStyleChange()">
-        <Radio RadioButton Value="@("inline")">inline</Radio>
-        <Radio RadioButton Value="@("flex")">flex</Radio>
-        <Radio RadioButton Value="@("block")">block</Radio>
-        <Radio RadioButton Value="@("inline-block")">inline-block</Radio>
-        <Radio RadioButton Value="@("none")">none</Radio>
-    </RadioGroup>
-</div>
-<div style="margin: 5px 15px 20px 10px;">
-    <label>定位：</label>
-    <RadioGroup TValue="string" @bind-Value="Component.ComponentStyle.Position" OnChange="() => OnStyleChange()">
-        <Radio RadioButton Value="@("static")">static</Radio>
-        <Radio RadioButton Value="@("relative")">relative</Radio>
-        <Radio RadioButton Value="@("absolute")">absolute</Radio>
-        <Radio RadioButton Value="@("fixed")">fixed</Radio>
-        <Radio RadioButton Value="@("sticky")">sticky</Radio>
-    </RadioGroup>
-</div>
-<div style="margin: 5px 15px 20px 10px;">
-    <label>自定义样式：</label>
-    <TextArea @bind-value="@Component.ComponentStyle.CustomStyle" OnChange="() => OnStyleChange()" />
-</div>
+﻿@if (Component != null)
+{
+    <div style="margin: 5px 15px 20px 10px;">
+        <label>布局：</label>
+        <RadioGroup TValue="string" @bind-Value="@Component.ComponentStyle.Display" OnChange="() => OnStyleChange()">
+            <Radio RadioButton Value="@("inline")">inline</Radio>
+            <Radio RadioButton Value="@("flex")">flex</Radio>
+            <Radio RadioButton Value="@("block")">block</Radio>
+            <Radio RadioButton Value="@("inline-block")">inline-block</Radio>
+            <Radio RadioButton Value="@("none")">none</Radio>
+        </RadioGroup>
+    </div>
+    <div style="margin: 5px 15px 20px 10px;">
+        <label>定位：</label>
+        <RadioGroup TValue="string" @bind-Value="Component.ComponentStyle.Position" OnChange="() => OnStyleChange()">
+            <Radio RadioButton Value="@("static")">static</Radio>
+            <Radio RadioButton Value="@("relative")">relative</Radio>
+            <Radio RadioButton Value="@("absolute")">absolute</Radio>
+            <Radio RadioButton Value="@("fixed")">fixed</Radio>
+            <Radio RadioButton Value="@("sticky")">sticky</Radio>
+        </RadioGroup>
+    </div>
+    <div style="margin: 5px 15px 20px 10px;">
+        <label>自定义样式：</label>
+        <TextArea @bind-value="@Component.ComponentStyle.CustomStyle" OnChange="() => OnStyleChange()" Style="height: 150px;" />
+    </div>
+}
 
 @code {
     [Parameter]
@@ -30,6 +32,6 @@
 
     private void OnStyleChange()
     {
-        BlazorEventDispatcher.Trigger("designengine.propertysetting.onchange", null);
+        Component.RefreshState();
     }
 }
