--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.Extensions.DependencyInjection
 @using H.LowCode.DesignEngine.Layout
 @using System.Net.Http
 @using AntDesign
@@ -10,5 +11,6 @@
 @using H.LowCode.DesignEngine.DesignPanel
 @using H.LowCode.DesignEngine.SettingPanel
 @using H.Util.Blazor
+@using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine.Services
 @using H.LowCode.MetaSchema
