--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
@@ -1,5 +1,5 @@
 ﻿<Flex Gap="middle" Justify="@_justify" Align="@_align" Style="@_boxStyle">
-    <DropItemContainer ParentComponent="@_component" Style="min-height:150px;width:100%;"></DropItemContainer>
+    <DropItemContainer ContainerComponent="@_component" Style="min-height:150px;width:100%;"></DropItemContainer>
 </Flex>
 
 @code {
@@ -23,25 +23,10 @@
         base.OnInitialized();
     }
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-            RegisterEventDispatcher();
-    }
-
     private void Init()
     {
         if (_component == null)
             _component = Component.CopyNew();
-    }
-
-    private void RegisterEventDispatcher()
-    {
-        //订阅属性面板中的事件
-        BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
-        {
-            StateHasChanged();
-        });
     }
     #endregion
 }
