--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
@@ -7,7 +7,7 @@
            {
                 string key = $"gridcontainer-{rr}-{c}";
                 <GridCol Span="@(24/Cols)" Style="width:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;">
-                    <DropItemContainer ParentComponent="@CreatComponent(key)"></DropItemContainer>
+                    <DropItemContainer ContainerComponent="@CreatComponent(key)"></DropItemContainer>
                 </GridCol>
            }
         </GridRow>
@@ -37,26 +37,10 @@
         base.OnInitialized();
     }
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-            RegisterEventDispatcher();
-    }
-
     private void Init()
     {
         if (_component == null)
             _component = Component.CopyNew();
-    }
-
-    private void RegisterEventDispatcher()
-    {
-        //订阅属性面板中的事件
-        BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
-        {
-            //Rows = Random.Shared.Next(1, 4);
-            StateHasChanged();
-        });
     }
     #endregion
 
