--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/TabsWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/TabsWrap.razor
@@ -3,7 +3,7 @@
     {
         string key = $"tab-{i}";
         <TabPane Tab="@key" Key="@key" Style="height: auto;">
-            <DropItemContainer ParentComponent="@CreatComponent(key)" Style="min-height:300px; height:auto; background: #f4f7fa;"></DropItemContainer>
+            <DropItemContainer ContainerComponent="@CreatComponent(key)" Style="min-height:300px; height:auto; background: #f4f7fa;"></DropItemContainer>
         </TabPane>
     }
 </Tabs>
@@ -30,12 +30,6 @@
         base.OnInitialized();
     }
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-            RegisterEventDispatcher();
-    }
-
     protected override bool ShouldRender()
     {
         return false;
@@ -45,15 +39,6 @@
     {
         if (_component == null)
             _component = Component.CopyNew();
-    }
-
-    private void RegisterEventDispatcher()
-    {
-        //订阅属性面板中的事件
-        BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
-        {
-            StateHasChanged();
-        });
     }
     #endregion
 
