--- a/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/_Imports.razor
@@ -1,7 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using AntDesign
+@using AntDesign.TableModels
 @using H.LowCode.MetaSchema
+@using H.LowCode.DesignEngine.DesignPanel
+@using H.LowCode.DesignEngine.DefaultComponents.Components
 @using H.Util.Blazor
-@using BlazorMonaco
-@using BlazorMonaco.Editor
-@using BlazorMonaco.Languages
+@using System.Text.Json
+@using System.ComponentModel
